--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "AIzaSyDyMrY61vvGybWfVxCAlNr4nb1xZpgXSd8")
     }
     buildTypes {
         release {
@@ -26,8 +27,9 @@ dependencies {
     })
     compile group: 'com.android.support', name: 'design', version: '26.1.0'
     compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-vision:11.0.4'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
+    compile "com.google.android.gms:play-services-location:11.8.0"
+    compile "com.google.android.gms:play-services-places:11.8.0"
     testCompile 'junit:junit:4.12'
 }
