Exercise Activity created.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
         <service
             android:name=".service.CrashService"
             android:enabled="true" />
+
+        <activity android:name=".ExerciseActivity"></activity>
     </application>
 
 </manifest>
