--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,9 @@ dependencies {
     compile(group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.4.1')
     compile(group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.4.1')
     compile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.4.1')
+
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
 }
