--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -48,6 +49,9 @@
 
         <activity android:name=".ExerciseActivity" />
         <activity android:name=".ui.DisplayContactsActivity" />
+        <activity
+            android:name=".ui.SplashActivity"
+            android:theme="@style/FullscreenTheme" />
     </application>
 
 </manifest>
