--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
@@ -18,6 +19,7 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        mavenCentral()
     }
 }
 
