Giving final touches!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
         <activity
             android:name=".ui.SplashActivity"
             android:theme="@style/FullscreenTheme" />
+        <activity android:name=".ui.AboutActivity" />
+        <activity android:name=".ui.ContributingActivity"></activity>
     </application>
 
 </manifest>
